@@ -4,6 +4,8 @@ For a documentation of all features, see http://semantic-mediawiki.org
 == SMW 1.6.3 ==
 
 * Added native "internal objects" that can be set using #setobject.
+* Added support for selecting a default graph when using RDF stores,
+  configuration called $smwgSparqlDefaultGraph
 * Fixed the default result format for #show.
 * Fixed display of table headers when they are all empty.
 * Migrated all query printers to use the new param handling,
